# variantformer

./: .gitignore  README.md  download_artifacts.py  install.sh  install_local.sh  pyproject.toml  requirements-fa-cu12.txt
anatomagram/: README.md  __init__.py
anatomagram/.archive/: data_simulator.py  mapping_enhancer.py  svg_analyzer.py
anatomagram/components/: __init__.py  anatomagram_widget.py  data_processor.py  prediction_converter.py  vcf_risk_converter.py
anatomagram/data/: README.md  tissue_mapping_enhanced.json  uberon_descriptions.json
anatomagram/utils/: prediction_processor.py
configs/: veploader.yaml  vf_model.yaml
datasets/: vepdataset.py
notebooks/: .gitignore  README.md  czi-sds-theme.css  debug.py  eqtl_analysis.ipynb  snp_indel_predictions.ipynb  variant2exp.ipynb  variant2risk.ipynb  vcf2embed.py  vcf2exp.ipynb  vcf2exp.py  vcf2risk.ipynb  vcf2risk.py
notebooks/example_data/: HG00096_vcf2exp_predictions.parquet
processors/: ad_risk.py  model_manager.py  multi_datasets_loader.py  variantprocessor.py  vcfprocessor.py
scripts/: README.md  build_uberon_reference.py  generate_go_annotations.py  generate_vcf2exp_predictions.py  verify_uberon_mappings.py
tests/: config.yaml  test_ad_risk.py  test_manifest_lookup.py  test_model.py  test_s3_cached_fetcher.py  test_vcf2risk.py  test_vep.py  tmp.tsv
tests/anatomagram/: integration_test.py  validate_mappings.py  validate_svg_mappings.py
utils/: assets.py  data_process.py  functions.py
vocabs/: dataset_vocab.yaml
