[project]
name = "VariantFormer"
version = "0.1.0"
description = "A tool for variant effect prediction and gene expression analysis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "CZI", email = "info@chanzuckerberg.com"}
]

dependencies = [
    # Install PyTorch first
    "torch~=2.8.0",
    "torchaudio~=2.8.0",
    "torchvision",
    # Then other dependencies
    "tqdm",
    "fsspec",
    "s3fs",
    "boto3~=1.40.49",
    "duckdb~=1.4.1",
    "einops~=0.8.1",
    "joblib~=1.3.2",
    "lightning~=2.5.1",
    "lightning-utilities~=0.14.3",
    "ninja~=1.11.1",
    "numpy~=2.2.5",
    "omegaconf~=2.3.0",
    "pandas~=2.2.3",
    "pyarrow",
    "psutil~=7.0.0",
    "pybedtools~=0.12.0",
    "pynvml~=12.0.0",
    "python-dateutil~=2.9.0",
    "pytorch-lightning~=2.5.1",
    "scanpy~=1.11.1",
    "scikit-learn~=1.5.2",
    "scipy~=1.15.3",
    "tokenizers~=0.21.1",
    "torchmetrics~=1.7.1",
    "treelite>=4.4.1",
    "ipynbname~=2025.8.0.0"
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.1.1",
]
marimo = [
    "marimo>=0.14.16",
    "anywidget>=0.9.13",
    "plotly>=5.17.0",
    "umap-learn>=0.5.4",
    "scikit-learn>=1.3.0",
]
test = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["datasets*", "processors*", "seq2gene*", "seq2reg*", "utils*", "vep*"]
exclude = ["tests*", "figs*", "notebooks*", "configs*", "vocabs*"]

# [tool.uv]
# no-build-isolation-package = ["flash-attn"]

# [tool.uv.extra-build-dependencies]
# flash-attn = ["setuptools>=80.9.0", "torch>=2.7,<2.8"]
